adding announcement bar

--- a/locales/en.default.json
+++ b/locales/en.default.json
@@ -5,5 +5,10 @@
         "link_messages": {
             "new_window": "Opens in a new window"
         }
+    },
+    "sections": {
+        "header": {
+            "announcement": "Announcement"
+        }
     }
 }
